Remove the javaOpts defaultConfig. Users should enter values as required